fix(home):added overflow-y: scroll; to main css

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -54,6 +54,7 @@ html, body {
     background: $body-bg;
     font-family: 'Ubuntu';
     font-weight: 300;
+    overflow-y: scroll;
 }
 
 #main {
